# data-hub

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
kalshi_platform/: __init__.py  config.py
kalshi_platform/api/: __init__.py  public_client.py
kalshi_platform/ingestion/: __init__.py  ws_client.py
kalshi_platform/storage/: __init__.py  questdb_hdb.py  questdb_rdb.py
kalshi_platform/ticker_plant/: __init__.py  order_book.py  processor.py
kalshi_platform/tools/: __init__.py  historical_fetcher.py  market_data_recorder.py  public_demo.py
scripts/: cleanup_orderbook_logs.py  sample_orderbooks.py
tests/: __init__.py  test_order_book.py  test_storage.py  test_ticker_processor.py  test_tools.py  test_ws_client.py
